# wind_estimation_uav

./: .gitignore  README.md  pyproject.toml
configs/controllers/: pid.yaml
configs/drones/: quadrotor_simple.yaml
configs/experiments/: wind_hover.yaml
configs/trajectories/: hover.yaml  hypotrochoid_fast.yaml  hypotrochoid_medium.yaml  hypotrochoid_slow.yaml  step_2m.yaml  step_5m.yaml
notebooks/: 00 - simulation_analysis.ipynb
src/core/: experiment_config.py  experiment_loader.py  registry.py  simulation_engine.py  timebase.py
src/data/: recorder.py
src/data/dataset/: stream_dataset.py  windowed_dataset.py
src/data/ingestion/: raw_dataset.py  recorder.py
src/data/preprocessing/: scales.py  splits.py  windowing.py
src/estimation/filters/: base_filter.py
src/estimation/filters/ekf/: ekf_wind.py  measurement.py  process_model.py  state.py
src/estimation/fusion/: ekf_residual_nn.py
src/estimation/losses/: regression.py
src/estimation/models/: base_model.py
src/estimation/models/baselines/: mlp.py  persistence.py
src/estimation/models/lstm/: model.py
src/evaluation/: ekf_runner.py  evaluator.py  metrics.py  plots.py  spectral.py
src/experiments/: run_experiments.py  run_single_simulation.py
src/notebooks/: 00 - simulation_analysis.ipynb
src/physics/: aerodynamics.py  constants.py  frames.py  rigid_body.py
src/physics/wind_model/: base_wind_model.py  constant_wind.py  dryden_wind.py  random_walk.py
src/sensors/: actuator.py  imu.py  state.py
src/simulation/: airsim_adapter.py  custom_simulator.py  simulator_base.py
src/training/: torch_adapter.py  trainer.py
src/trajectories/: __init__.py  base_trajectory.py  hover.py  hypotrochoid.py  step.py  waypoint.py
src/utils/: seeds.py  serialization.py  types.py
tests/: conftest.py  requirements.txt
tests/data/: test_ingestion.py  test_preprocessing.py  test_windowing.py
tests/estimation/: test_baselines.py  test_ekf_sanity.py
tests/integration/: test_end_to_end.py
tests/physics/: test_wind_models.py
tests/sensors/: test_actuator_sensor.py  test_state_sensor.py
tests/simulation/: test_custom_simulator.py
