# ============================================================
# Build system (PEP 517 / 518)
# ============================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


# ============================================================
# Project metadata
# ============================================================

[project]
name = "wind-estimation-uav"
version = "0.1.0"
description = "Wind estimation for multirotor UAVs using physics-based and learning-based models"
authors = [
    { name = "Rickson Gomes Monteiro" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "torch",
]

# (opcional, mas bom para futuro)
keywords = ["uav", "wind-estimation", "robotics", "lstm", "ekf"]


# ============================================================
# Optional dependencies (dev / test)
# ============================================================

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]


# ============================================================
# Setuptools configuration for src/ layout
# ============================================================

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]


# ============================================================
# Pytest configuration
# ============================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"


# ============================================================
# Formatting / linting (opcional, mas recomendado)
# ============================================================

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"


# ============================================================
# MyPy (opcional, futuro)
# ============================================================

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
